# floneum

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  build.rs  index.html  output.rsx  plugin.wai  prompt.txt  tailwind.config.js  test_simple  test_simple.rs
.cargo/: config.toml
cfg/: Cargo.toml
cfg/examples/: merge.rs
cfg/src/: cnf.rs  lib.rs  main.rs  parse.rs  slab_grammar.rs  tokenizer.rs
floneum/: Cargo.toml  README.md
floneum-cli/: Cargo.toml
floneum-cli/src/: main.rs
floneum/example_workflows/: StarRepo.json
floneum/floneum/: Cargo.toml  README.md
floneum/floneum-cli/: Cargo.toml
floneum/floneum-cli/src/: main.rs
floneum/floneum/example_workflows/: Q&A.json  SummarizeNews.json
floneum/floneum/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
floneum/floneum/latest-report/: report.html  report.md  report_for_pdf.html
floneum/floneum/public/: tailwind.css
floneum/floneum/src/: connection.rs  current_node.rs  desktop.rs  graph.rs  icons.rs  input.rs  main.rs  node.rs  node_value.rs  output.rs  plugin_search.rs  share.rs  sidebar.rs  theme.rs  value.rs  window.rs
floneum/floneumite/: Cargo.toml
floneum/floneumite/src/: index.rs  lib.rs  package.rs
floneum/plugin/: Cargo.toml  wasi_snapshot_preview1.wasm
floneum/plugin/src/: embedding.rs  embedding_db.rs  host.rs  lib.rs  llm.rs  node.rs  page.rs  plugin.rs  proxies.rs  resource.rs
floneum/plugin/tests/: load_plugin.rs  test_plugin.wasm
floneum/plugins/add/: Cargo.toml
floneum/plugins/add_embedding/: Cargo.toml
floneum/plugins/add_to_list/: Cargo.toml
floneum/plugins/and/: Cargo.toml
floneum/plugins/calculate/: Cargo.toml
floneum/plugins/click_node/: Cargo.toml
floneum/plugins/contains/: Cargo.toml
floneum/plugins/divide/: Cargo.toml
floneum/plugins/embedding/: Cargo.toml
floneum/plugins/embedding_db/: Cargo.toml
floneum/plugins/equals/: Cargo.toml
floneum/plugins/find_child_node/: Cargo.toml
floneum/plugins/find_node/: Cargo.toml
floneum/plugins/format/: Cargo.toml
floneum/plugins/generate_structured_text/: Cargo.toml
floneum/plugins/generate_text/: Cargo.toml
floneum/plugins/get_article/: Cargo.toml
floneum/plugins/if_statement/: Cargo.toml
floneum/plugins/join/: Cargo.toml
floneum/plugins/length/: Cargo.toml
floneum/plugins/less_than/: Cargo.toml
floneum/plugins/more_than/: Cargo.toml
floneum/plugins/multiply/: Cargo.toml
floneum/plugins/navigate_to/: Cargo.toml
floneum/plugins/new_list/: Cargo.toml
floneum/plugins/node_text/: Cargo.toml
floneum/plugins/not/: Cargo.toml
floneum/plugins/number/: Cargo.toml
floneum/plugins/or/: Cargo.toml
floneum/plugins/power/: Cargo.toml
floneum/plugins/python/: Cargo.toml
floneum/plugins/read_from_file/: Cargo.toml
floneum/plugins/read_rss/: Cargo.toml
floneum/plugins/search/: Cargo.toml
floneum/plugins/search_engine/: Cargo.toml
floneum/plugins/slice/: Cargo.toml
floneum/plugins/split/: Cargo.toml
floneum/plugins/string/: Cargo.toml
floneum/plugins/subtract/: Cargo.toml
floneum/public/: Icon.rgba  tailwind.css
floneum/rust_adapter/: Cargo.toml  build.rs
floneum/rust_macro/: Cargo.toml
floneum/src/: edge.rs  input.rs  node.rs  sidebar.rs  value.rs  window.rs
floneum/wit/: plugin.wit
floneumin/: Cargo.toml
floneumin-language/: Cargo.toml
floneumin-language/src/: download.rs  embedding.rs  lib.rs  model.rs  vector_db.rs
floneumin-sample/: Cargo.toml
floneumin-sample/src/: lib.rs  model.rs  structured.rs  structured_parser.rs
floneumin-sound/: Cargo.toml
floneumin-sound/src/: audio.rs  lib.rs  main.rs  whisper.rs
floneumin-streams/: Cargo.toml
floneumin-streams/src/: lib.rs  sender.rs  text_stream.rs  timed_stream.rs
floneumin-vision/: Cargo.toml
floneumin-vision/src/: lib.rs
floneumin/examples/: constrained.rs  context.rs  crawl.rs  fs_context.rs  generate_text.rs  live_qa.rs  mistral.rs  phi.rs  qa.rs  remote.rs  remote_embed.rs  sync.rs  tools.rs  transcribe.rs
floneumin/src/: chat.rs  lib.rs
floneumite/: Cargo.toml
floneumite/src/: index.rs  lib.rs  package.rs
fusor-ml/core/: Cargo.toml  MATMUL_OPTIMIZATION_ANALYSIS.md  MATMUL_TUNING.md  README.md
fusor-ml/cpu/: Cargo.toml
fusor-ml/fusor/: Cargo.toml
fusor-ml/gguf/: Cargo.toml  build.rs
fusor-ml/nanochat-app/: Cargo.toml  Dioxus.toml
kalosm/: Cargo.toml  README.md
kalosm-sample/: Cargo.toml
kalosm-sample/src/: lib.rs  llm.rs  structured.rs  structured_parser.rs
kalosm/documents/: index.md
kalosm/examples/: constrained-rust-types.rs  constrained.rs  context.rs  fs_context.rs  generate_text.rs  live_qa.rs  mistral.rs  phi.rs  qa.rs  remote.rs  remote_embed.rs  sync.rs  tools.rs  transcribe.rs
kalosm/src/: chat.rs  lib.rs
plugin/: Cargo.toml  my-component.wasm  wasi_snapshot_preview1.wasm
plugin/src/: browse.rs  download.rs  embedding.rs  embedding_db.rs  host.rs  infer.rs  json.rs  lib.rs  llm.rs  main.rs  node.rs  page.rs  plugin.rs  proxies.rs  sessions.rs  structure.rs  structured.rs  structured_parser.rs  vector_db.rs
plugin/wit/: plugin.wit
plugin_demo/: Cargo.toml
plugin_demo/src/: lib.rs
rust_adapter/: Cargo.toml
rust_adapter/src/: filesystem.rs  lib.rs  model_instance.rs  node.rs  state.rs  structured_inferance.rs  tab.rs  vector_db.rs
rust_macro/: Cargo.toml
rust_macro/src/: lib.rs
rwhisper/: Cargo.toml
rwhisper/examples/: transcribe.rs
rwhisper/src/: lib.rs  model.rs  source.rs
sygus/: Cargo.toml  out.csv  run_all_models.sh
sygus/results/: llama1b.txt  llama3b.txt  llama8b.txt  qwen0.5b.txt  qwen1.5b.txt  qwen3b.txt  qwen7b.txt  results.txt  smol-lm.txt
sygus/src/: firstname.sl  grammar.sl  main.rs  prompt
sygus/sygus-strings/: bikes.sl  dr-name.sl  firstname.sl  initials.sl  lastname.sl  name-combine-2.sl  name-combine-3.sl  name-combine-4.sl  name-combine.sl  phone-1.sl  phone-10.sl  phone-2.sl  phone-3.sl  phone-4.sl  phone-5.sl  phone-6.sl  phone-7.sl  phone-8.sl  phone-9.sl  phone.sl  reverse-name.sl  univ_1.sl  univ_2.sl  univ_3.sl  univ_4.sl  univ_5.sl  univ_6.sl
(+2355 files in other folders)
