[package]
name = "kalosm-workspace"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]

[workspace]
members = [
    "models/rbert",
    "models/kalosm-llama",
    "models/rphi",
    "models/rwhisper",
    "models/rwuerstchen",
    "models/segment-anything-rs",
    "models/kalosm-ocr",
    "interfaces/kalosm",
    "interfaces/kalosm-language",
    "interfaces/language-model",
    "interfaces/kalosm-sample",
    "interfaces/kalosm-vision",
    "interfaces/kalosm-sound",
    "interfaces/kalosm-streams",
    "interfaces/kalosm-learning",
    "interfaces/kalosm-learning-macro",
    "interfaces/kalosm-parse-macro",
    "interfaces/kalosm-common",
]

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "2b10aaa" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "2b10aaa" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "2b10aaa" }
candle-datasets = { git = "https://github.com/huggingface/candle", rev = "2b10aaa" }
kalosm = { path = "./interfaces/kalosm", version = "0.2.1" }
kalosm-sample = { path = "./interfaces/kalosm-sample", version = "0.2.1" }
kalosm-parse-macro = { path = "./interfaces/kalosm-parse-macro", version = "0.2.1" }
kalosm-common = { path = "./interfaces/kalosm-common", version = "0.1.0" }
kalosm-language-model = { path = "./interfaces/language-model", version = "0.2.1" }
kalosm-streams = { path = "./interfaces/kalosm-streams", version = "0.2.1" }
kalosm-language = { path = "./interfaces/kalosm-language", version = "0.2.1" }
kalosm-sound = { path = "./interfaces/kalosm-sound", version = "0.2.1" }
kalosm-vision = { path = "./interfaces/kalosm-vision", version = "0.2.1" }
kalosm-learning = { path = "./interfaces/kalosm-learning", version = "0.2.1" }
kalosm-learning-macro = { path = "./interfaces/kalosm-learning-macro", version = "0.2.1" }
rphi = { path = "./models/rphi", version = "0.2.1" }
rbert = { path = "./models/rbert", version = "0.2.1" }
kalosm-llama = { path = "./models/kalosm-llama", version = "0.2.1" }
rwhisper = { path = "./models/rwhisper", version = "0.2.1" }
rwuerstchen = { path = "./models/rwuerstchen", version = "0.2.1" }
segment-anything-rs = { path = "./models/segment-anything-rs", version = "0.2.1" }
kalosm-ocr = { path = "./models/kalosm-ocr", version = "0.2.1" }
llm-samplers = "=0.0.7"
parking_lot = "0.12.1"
tokenizers = "0.19.1"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
