[package]
name = "kalosm-workspace"
version = "0.4.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
publish = false

[workspace]
members = [
    "models/rbert",
    "models/kalosm-llama",
    "models/rwhisper",
    "models/rwuerstchen",
    "models/segment-anything-rs",
    "models/kalosm-ocr",
    "interfaces/kalosm",
    "interfaces/kalosm-language",
    "interfaces/language-model",
    "interfaces/kalosm-sample",
    "interfaces/kalosm-vision",
    "interfaces/kalosm-sound",
    "interfaces/kalosm-streams",
    "interfaces/kalosm-learning",
    "interfaces/kalosm-learning-macro",
    "interfaces/kalosm-parse-macro",
    "interfaces/kalosm-common",
    "interfaces/kalosm-model-types",
    "fusor-ml/core",
    "fusor-ml/gguf", "sygus",
]

[workspace.dependencies]
candle-core = { version = "0.8.2" }
candle-nn = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
kalosm = { path = "./interfaces/kalosm", version = "0.4.0" }
kalosm-sample = { path = "./interfaces/kalosm-sample", version = "0.4.0" }
kalosm-parse-macro = { path = "./interfaces/kalosm-parse-macro", version = "0.4.0" }
kalosm-common = { path = "./interfaces/kalosm-common", version = "0.4.0" }
kalosm-model-types = { path = "./interfaces/kalosm-model-types", version = "0.4.0" }
kalosm-language-model = { path = "./interfaces/language-model", version = "0.4.0" }
kalosm-streams = { path = "./interfaces/kalosm-streams", version = "0.4.0" }
kalosm-language = { path = "./interfaces/kalosm-language", version = "0.4.0", default-features = false }
kalosm-sound = { path = "./interfaces/kalosm-sound", version = "0.4.0" }
kalosm-vision = { path = "./interfaces/kalosm-vision", version = "0.4.0" }
kalosm-learning = { path = "./interfaces/kalosm-learning", version = "0.4.0" }
kalosm-learning-macro = { path = "./interfaces/kalosm-learning-macro", version = "0.4.0" }
rbert = { path = "./models/rbert", version = "0.4.0" }
kalosm-llama = { path = "./models/kalosm-llama", version = "0.4.0" }
rwhisper = { path = "./models/rwhisper", version = "0.4.0" }
rwuerstchen = { path = "./models/rwuerstchen", version = "0.4.0" }
segment-anything-rs = { path = "./models/segment-anything-rs", version = "0.4.0" }
kalosm-ocr = { path = "./models/kalosm-ocr", version = "0.4.0" }
fusor-gguf = { path = "./fusor-ml/gguf", version = "0.1.0" }
llm-samplers = "=0.0.7"
tokenizers = "0.21.0"
thiserror = "2.0.7"
anyhow = "1.0.94"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/floneum/floneum"]
kalosm-sample = { path = "./interfaces/kalosm-sample" }
