[package]
name = "cfg"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
bit-set = "0.8.0"
bumpalo = { version = "3.17.0", features = ["collections"] }
comfy-table = "7.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
rustc-hash = "2.1.1"
slab = "0.4.10"
beef = "0.5.2"
smallvec = "1.15.1"

[dev-dependencies]
rand = "0.9.2"
