[package]
name = "floneum-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
floneumite = { path = "../floneumite" }
floneum_plugin = { path = "../plugin" }
tokio = { version = "1.29.1", features = ["full"] }
cargo-manifest = "0.9.0"
toml = "0.7.5"
