[package]
name = "floneumin-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
futures-util = "0.3.28"
llm-samplers = "=0.0.6"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
spinoff = "0.7.0"
tokio = { version = "1.28.1", features = ["full"] }
slab = { version = "0.4.8", features = ["serde"] }
instant-distance = { version = "0.6.0", features = ["with-serde"] }
serde = { version = "1.0.163", features = ["derive"] }
partial_sort = "0.2.0"
once_cell = "1.18.0"
pollster = "0.3.0"
url = "2.4.0"
anyhow = "1.0.71"
tracing = "0.1.37"
num_cpus = "1.16.0"
async-openai = "0.14.2"
async-trait = "0.1.73"
serde_json = "1.0.107"
chrono = "0.4.31"
readability = { version = "0.2.0", default_features = false }
tantivy = "0.21.0"
tempfile = "3.8.0"
rss = { version = "2.0.6", features = ["atom"] }
scraper = "0.17.1"
llm = { git = "https://github.com/rustformers/llm" }
floneumite = { path = "../floneumite" }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
candle-core = { git = "https://github.com/huggingface/candle" }
tokio-util = { version = "0.7.9", features = ["rt"] }
crossbeam = "0.8.2"
dashmap = "5.5.3"
rbert = { path = "../rbert" }
pin-project = "1"

[features]
metal = ["llm/metal"]
cublas = ["llm/cublas"]
