[package]
name = "floneumin-sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpal = "0.15.1"
itertools = "0.10.5"
ringbuf = "0.3.2"
webrtc-vad = "0.4"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "whisper-8e46ba8" }
