[package]
name = "floneumin-sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpal = "0.15.1"
itertools = "0.10.5"
rand = "0.8.5"
ringbuf = "0.3.2"
webrtc-vad = "0.4"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "whisper-8e46ba8" }
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
byteorder = "1.4.3"
hf-hub = "0.3.1"
tokenizers = "0.14.0"
serde_json = "1.0.107"
hound = "3.5"
rodio = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tts = "0.25.6"
ringbuffer = "0.15.0"
futures-util = "0.3.28"
async-trait = "0.1.73"
floneumin-streams = { path = "../floneumin-streams" }
rwhisper ={ path = "../rwhisper" }
