[package]
name = "floneumin-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
anyhow = "1.0.71"
tracing = "0.1.37"
pin-project = "1"
tokio = { version = "1.28.1", features = ["full"] }
