[package]
name = "floneumin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floneumin-language = { path = "../floneumin-language" }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"

[dev-dependencies]
tracing-subscriber = "0.2"