[package]
name = "floneumin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floneumin-language = { path = "../floneumin-language" }
floneumin-sound = { path = "../floneumin-sound" }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
anyhow = "1.0.75"
floneumin-streams = { path = "../floneumin-streams" }
rand = "0.8.5"

[dev-dependencies]
tracing-subscriber = "0.2"
llm-samplers = { git = "https://github.com/ealmloff/llm-samplers" }

[features]
metal = ["floneumin-language/metal"]
cublas = ["floneumin-language/cublas"]
