[package]
name = "floneumite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
directories = "5.0.1"
gix = { git = "https://github.com/Byron/gitoxide", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
