[package]
name = "floneumite"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
directories = "5.0.1"
hyper = "0.14.27"
log = "0.4.19"
octocrab = "0.28.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.37"
