[package]
name = "kalosm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalosm-language.workspace = true
kalosm-sound.workspace = true
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
anyhow = "1.0.75"
kalosm-streams.workspace = true
rand = "0.8.5"

[dev-dependencies]
tracing-subscriber = "0.2"
llm-samplers = { version = "0.0.6" }

[features]
metal = ["kalosm-language/metal"]
cublas = ["kalosm-language/cublas"]
