[package]
name = "floneum_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2d34b4657aa5290948da9a07cb31764a12c12994", features = ['component-model'] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2d34b4657aa5290948da9a07cb31764a12c12994", features = ['preview2'] }
wit-component = "0.11.0"
bytesize = "1.2.0"
futures-util = "0.3.28"
llm = { git = "https://github.com/rustformers/llm", rev = "9a222690cd0a9e3322bb6a926d54e90d08fb2c0f" }
# llm = { git = "https://github.com/darxkies/llm", branch = "ggml-blas", features = ["clblast"] }
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream"] }
spinoff = "0.7.0"
tokio = { version = "1.28.1", features = ["full"] }
slab = { version = "0.4.8", features = ["serde"] }
instant-distance = { version = "0.6.0", features = ["with-serde"] }
serde = { version = "1.0.163", features = ["derive"] }
partial_sort = "0.2.0"
once_cell = "1.18.0"
pollster = "0.3.0"
