[package]
name = "floneum_rust_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1"
quote = "1"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "70190725949c6f460e49c00880982cefa130354c" }
