[package]
name = "sygus"
version = "0.1.0"
edition = "2024"

[dependencies]
kalosm = { workspace = true, features = ["language"] }
kalosm-llama.workspace = true
kalosm-sample.workspace = true
nom = "8.0.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"

[features]
metal = ["kalosm-llama/metal", "kalosm/metal"]
