[package]
name = "sygus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
kalosm = { workspace = true, features = ["language"] }
kalosm-llama.workspace = true
kalosm-sample.workspace = true
nom = "8.0.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
llm-samplers = "0.0.7"
bumpalo = "3.19.0"
cfg = { version = "0.1.0", path = "../cfg" }
lru = "0.16.0"
tokenizers.workspace = true

[features]
metal = ["kalosm-llama/metal", "kalosm/metal"]

[profile.dev.package."*"]
opt-level = 3
