[package]
name = "floneum-cli"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
floneumite = { path = "../floneumite" }
floneum_plugin = { path = "../plugin" }
tokio = { version = "1.29.1", features = ["full"] }
cargo_metadata = "0.15.4"
toml = "0.7.5"

[[bin]]
path = "src/main.rs"
name = "floneum"
