[package]
name = "floneum"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]
bytesize = "1.2.0"
futures-util = "0.3.28"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0"
floneum_plugin = { path = "../plugin" }
floneumite = { path = "../floneumite" }
serde = { version = "1.0.163", features = ["derive"] }
slab = "0.4.8"
simple_logger = "4.1.0"
pollster = "0.3.0"
cargo-dist = "0.0.7"
once_cell = "1.18.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    'component-model',
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }
petgraph = { version = "0.6.4", features = ["serde-1"] }
dioxus-desktop = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }
dioxus-router = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }
dioxus-signals = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals", features = [
    "serialize",
] }
dioxus-free-icons = { version = "0.7.0", features = ["ionicons"] }
rfd = "0.11.4"
dioxus-std = { git = "https://github.com/DioxusLabs/dioxus-std/", version = "0.4.0", features = [
    "clipboard",
] }
directories = "5.0.1"
winit = "0.29"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.16" }
x11 = "2.21.0"

[patch.crates-io]
dioxus-core = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }
dioxus-rsx = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "improved-signals" }

[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[features]
metal = ["floneum_plugin/metal"]
cublas = ["floneum_plugin/cublas"]
