[package]
name = "floneum"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]
bytesize = "1.2.0"
futures-util = "0.3.28"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0"
floneum_plugin = { path = "../plugin" }
floneumite = { path = "../floneumite" }
serde = { version = "1.0.163", features = ["derive"] }
slab = "0.4.8"
simple_logger = "4.1.0"
cargo-dist = "0.0.7"
once_cell = "1.18.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    'component-model',
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = [
    "desktop",
    "router",
]}
petgraph = { version = "0.6.4", features = ["serde-1"] }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus", features = [
    "serialize",
] }
dioxus-free-icons = { git = "https://github.com/dioxus-community/dioxus-free-icons", branch = "feat/dioxus-0.5", features = ["ionicons"] }
rfd = "0.12"
dioxus-std = { git = "https://github.com/marc2332/dioxus-std/", branch = "feat/dioxus-0.5", features = [
    "clipboard",
] }
directories = "5.0.1"
muda = "0.11.3"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[features]
metal = ["floneum_plugin/metal"]
cublas = ["floneum_plugin/cublas"]
