[package]
name = "floneum"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]
futures-util = "0.3.28"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0"
floneum_plugin = { path = "../plugin" }
floneumite = { path = "../floneumite" }
serde = { version = "1.0.163", features = ["derive"] }
slab = "0.4.8"
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dioxus = { git = "https://github.com/ealmloff/dioxus/", branch = "create-race-condition-desktop", features = [
    "desktop",
    "router",
]}
petgraph = { version = "0.6.4", features = ["serde-1"] }
dioxus-signals = { git = "https://github.com/ealmloff/dioxus/", branch = "create-race-condition-desktop", features = [
    "serialize",
] }
rfd = "0.12"
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk", features = [
    "clipboard",
] }
directories = "5.0.1"
muda = "0.11.3"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18" }
x11-dl = "2.21.0"

[features]
metal = ["floneum_plugin/metal"]
cublas = ["floneum_plugin/cublas"]
