[package]
name = "floneum_rust"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]

[dependencies]
floneum_rust_macro = { path = "../rust_macro" }
image = "0.24.6"
log = {version = "0.4", features = ["std"]}
bincode = "1.3.3"
serde = { version = "1.0.173", features = ["derive"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "285f0c6ad5da3d6cd8ef2e0635df51f229d6578f" }
